--- a/UnitTest/app/build.gradle
+++ b/UnitTest/app/build.gradle
@@ -50,13 +50,15 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
 
     // Test Library
+    def arch_version = "2.1.0"
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
     testImplementation "com.google.truth:truth:1.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation("org.mockito:mockito-android:2.24.5")
-    testImplementation 'org.mockito:mockito-inline:2.21.0'
+    testImplementation "org.mockito:mockito-core:2.28.2"
+    testImplementation "androidx.arch.core:core-testing:$arch_version"
 
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
